fix for my course

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,7 +11,7 @@
 	<!--[if IE]><meta content='IE=8' http-equiv='X-UA-Compatible' /><![endif]-->
 
 	<title>{{ site.data.course.title }} | {{ page.title }}</title>
-	<meta name="author" content="p2pu">
+	<meta name="Rachel Schwartz" content="BIO181G">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!--change this to serve from gh pages -->
