--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,9 @@
-<footer class="p2pu-footer">
+<footer class="footer">
 
 	<div class="container">
 
 		<hr>
-		<div class="col-md-4 first">
 
-
-		</div>
 
 		<div class="pull-right col-md-3 cc-by-sa">
 			<img src="{{ site.baseurl }}/img/cc-icons.png" alt="CC-BY-SA Icon" />
