remove some p2pu

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,6 +15,7 @@
 
 		<div class="collapse navbar-collapse" id="p2pu-menu">
 			<ul class="nav navbar-nav navbar-right">
+				<li><a href="{{ site.baseurl }}/">Home</a></li>
 				<li><a href="{{ site.baseurl }}/">Information</a></li>
 				<li class="dropdown active">
           <a href="#" >Weekly materials </a>
