--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,7 +16,22 @@
 		<div class="collapse navbar-collapse" id="p2pu-menu">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="{{ site.baseurl }}/">Home</a></li>
-				<li><a href="{{ site.baseurl }}/info">Information</a></li>
+
+				<li class="dropdown active">
+					<a href="#" >Information</a>
+					<span class="fa fa-caret-down dropdown-toggle visible-xs-block visible-sm-block" data-toggle="dropdown"></span>
+					<ul class="dropdown-menu" role="menu">
+						{% for post in site.categories.info %}
+							<li>
+								<a {% if post.url == page.url %}class="active"{% endif %}
+									 href="{{ site.baseurl }}{{ post.url }}">
+									{{ post.title }}
+								</a>
+							</li>
+						{% endfor %}
+					</ul>
+				</li>
+
 				<li class="dropdown active">
           <a href="#" >Weekly materials </a>
           <span class="fa fa-caret-down dropdown-toggle visible-xs-block visible-sm-block" data-toggle="dropdown"></span>
