--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
-			URI BIO181G: The Information Age
+			<a href="{{ site.baseurl }}/">URI BIO181G: The Information Age</a>
 			<a class="navbar-toggle" data-toggle="collapse" data-target="#p2pu-menu">
 				<span class="sr-only">Toggle navigation</span>
 				<i class="fa fa-bars"></i>
