--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,10 @@
 	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
-			<a href="{{ site.baseurl }}/">URI BIO181G: The Information Age</a>
+			<ul class="nav navbar-nav navbar-left">
+				<li><a href="{{ site.baseurl }}/">URI BIO181G: The Information Age</a></li>
+			</ul>
+			
 			<a class="navbar-toggle" data-toggle="collapse" data-target="#p2pu-menu">
 				<span class="sr-only">Toggle navigation</span>
 				<i class="fa fa-bars"></i>
