--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,9 +4,9 @@
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 			<ul class="nav navbar-nav navbar-left">
-				<li><a href="{{ site.baseurl }}/">URI BIO181G: The Information Age</a></li>
+				<li><a href="{{ site.baseurl }}/"><font size="8">URI BIO181G: The Information Age</font></a></li>
 			</ul>
-			
+
 			<a class="navbar-toggle" data-toggle="collapse" data-target="#p2pu-menu">
 				<span class="sr-only">Toggle navigation</span>
 				<i class="fa fa-bars"></i>
