--- a/_layouts/course_page.html
+++ b/_layouts/course_page.html
@@ -7,7 +7,7 @@ layout: base
   <div class="sidebar col-lg-4">
 
     <ul class="nav nav-list">
-    {% for subpage in site.categories.content reversed %}
+    {% for subpage in site.categories.content %}
       <li class="{% if subpage.title == page.title %}active{% endif %}" > <a href="{{site.baseurl}}{{ subpage.url }}">{{subpage.title}}</a></li>
     {% endfor %}
     </ul>
