update day and title

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 			<ul class="nav navbar-nav navbar-left">
-				<li><a href="{{ site.baseurl }}/"><font size="7">URI BIO181G: The Information Age</font></a></li>
+				<li><a href="{{ site.baseurl }}/"><font size="7">URI BIO439/539: Big Data Analysis</font></a></li>
 			</ul>
 
 			<a class="navbar-toggle" data-toggle="collapse" data-target="#p2pu-menu">
@@ -22,7 +22,7 @@
 
 				<li><a href="{{ site.baseurl }}/info">General Information</a></li>
 
-				<li><a href="{{ site.baseurl }}/day24">Weekly Materials</a></li>
+				<li><a href="{{ site.baseurl }}/day1">Weekly Materials</a></li>
 
 			</ul>
 		</div>
